gen/ExprParser.py
# Generated from D:/Projects/3course/yapis/programming_language\Expr.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'and'", "'or'", "'not'", "'='", "','", 
                     "';'", "'('", "')'", "'{'", "'}'", "'if'", "'else'", 
                     "'\\n'", "'main'", "'print'", "'return'", "'input()'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'=='" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "NOT", "EQ", "COMMA", "SEMI", 
                      "LPAREN", "RPAREN", "LCURLY", "RCURLY", "IF", "ELSE", 
                      "NLINE", "MAIN", "PRINT", "RETURN", "INPUT", "TYPE", 
                      "NUM", "ID", "DEF_OP", "EQ_OP", "WS", "STR" ]

    RULE_program = 0
    RULE_func = 1
    RULE_assign_statement = 2
    RULE_statement = 3
    RULE_expr = 4
    RULE_operation = 5
    RULE_used_func = 6
    RULE_set = 7
    RULE_any_statement = 8
    RULE_show_statement = 9
    RULE_if_statement = 10
    RULE_if_condition = 11
    RULE_return_statement = 12

    ruleNames =  [ "program", "func", "assign_statement", "statement", "expr", 
                   "operation", "used_func", "set", "any_statement", "show_statement", 
                   "if_statement", "if_condition", "return_statement" ]

    EOF = Token.EOF
    AND=1
    OR=2
    NOT=3
    EQ=4
    COMMA=5
    SEMI=6
    LPAREN=7
    RPAREN=8
    LCURLY=9
    RCURLY=10
    IF=11
    ELSE=12
    NLINE=13
    MAIN=14
    PRINT=15
    RETURN=16
    INPUT=17
    TYPE=18
    NUM=19
    ID=20
    DEF_OP=21
    EQ_OP=22
    WS=23
    STR=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(ExprParser.MAIN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.FuncContext)
            else:
                return self.getTypedRuleContext(ExprParser.FuncContext,i)


        def any_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Any_statementContext)
            else:
                return self.getTypedRuleContext(ExprParser.Any_statementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 26
                self.func()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(ExprParser.MAIN)
            self.state = 33
            self.match(ExprParser.LCURLY)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1411072) != 0):
                self.state = 34
                self.any_statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(ExprParser.RCURLY)
            self.state = 41
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.TYPE)
            else:
                return self.getToken(ExprParser.TYPE, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def any_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Any_statementContext)
            else:
                return self.getTypedRuleContext(ExprParser.Any_statementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = ExprParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(ExprParser.TYPE)
            self.state = 44
            self.match(ExprParser.ID)
            self.state = 45
            self.match(ExprParser.LPAREN)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 46
                self.match(ExprParser.TYPE)
                self.state = 47
                self.match(ExprParser.ID)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 48
                    self.match(ExprParser.COMMA)
                    self.state = 49
                    self.match(ExprParser.TYPE)
                    self.state = 50
                    self.match(ExprParser.ID)
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 58
            self.match(ExprParser.RPAREN)
            self.state = 59
            self.match(ExprParser.LCURLY)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1411072) != 0):
                self.state = 60
                self.any_statement()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(ExprParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(ExprParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_assign_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_statement" ):
                listener.enterAssign_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_statement" ):
                listener.exitAssign_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_statement" ):
                return visitor.visitAssign_statement(self)
            else:
                return visitor.visitChildren(self)




    def assign_statement(self):

        localctx = ExprParser.Assign_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ExprParser.TYPE)
            self.state = 69
            self.match(ExprParser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 70
                self.match(ExprParser.COMMA)
                self.state = 71
                self.match(ExprParser.ID)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def TYPE(self):
            return self.getToken(ExprParser.TYPE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 77
                self.match(ExprParser.TYPE)


            self.state = 80
            self.match(ExprParser.ID)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 81
                self.match(ExprParser.COMMA)
                self.state = 82
                self.match(ExprParser.ID)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(ExprParser.EQ)

            self.state = 89
            self.expr()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 90
                self.match(ExprParser.COMMA)
                self.state = 91
                self.expr()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def NUM(self):
            return self.getToken(ExprParser.NUM, 0)

        def set_(self):
            return self.getTypedRuleContext(ExprParser.SetContext,0)


        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def used_func(self):
            return self.getTypedRuleContext(ExprParser.Used_funcContext,0)


        def INPUT(self):
            return self.getToken(ExprParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def TYPE(self):
            return self.getToken(ExprParser.TYPE, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 97
                self.match(ExprParser.ID)
                pass

            elif la_ == 2:
                self.state = 98
                self.match(ExprParser.LPAREN)
                self.state = 99
                self.match(ExprParser.TYPE)
                self.state = 100
                self.match(ExprParser.RPAREN)
                self.state = 101
                self.match(ExprParser.ID)
                pass

            elif la_ == 3:
                self.state = 102
                self.match(ExprParser.NUM)
                pass

            elif la_ == 4:
                self.state = 103
                self.set_()
                pass

            elif la_ == 5:
                self.state = 104
                self.operation()
                pass

            elif la_ == 6:
                self.state = 105
                self.used_func()
                pass

            elif la_ == 7:
                self.state = 106
                self.match(ExprParser.INPUT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def used_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Used_funcContext)
            else:
                return self.getTypedRuleContext(ExprParser.Used_funcContext,i)


        def DEF_OP(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.DEF_OP)
            else:
                return self.getToken(ExprParser.DEF_OP, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NUM)
            else:
                return self.getToken(ExprParser.NUM, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LPAREN)
            else:
                return self.getToken(ExprParser.LPAREN, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.TYPE)
            else:
                return self.getToken(ExprParser.TYPE, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RPAREN)
            else:
                return self.getToken(ExprParser.RPAREN, i)

        def getRuleIndex(self):
            return ExprParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = ExprParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 109
                    self.match(ExprParser.LPAREN)
                    self.state = 110
                    self.match(ExprParser.TYPE)
                    self.state = 111
                    self.match(ExprParser.RPAREN)


                self.state = 114
                self.match(ExprParser.ID)
                pass

            elif la_ == 2:
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 115
                    self.match(ExprParser.LPAREN)
                    self.state = 116
                    self.match(ExprParser.TYPE)
                    self.state = 117
                    self.match(ExprParser.RPAREN)


                self.state = 120
                self.match(ExprParser.NUM)
                pass

            elif la_ == 3:
                self.state = 121
                self.used_func()
                pass


            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 124
                self.match(ExprParser.DEF_OP)
                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==7:
                        self.state = 125
                        self.match(ExprParser.LPAREN)
                        self.state = 126
                        self.match(ExprParser.TYPE)
                        self.state = 127
                        self.match(ExprParser.RPAREN)


                    self.state = 130
                    self.match(ExprParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==7:
                        self.state = 131
                        self.match(ExprParser.LPAREN)
                        self.state = 132
                        self.match(ExprParser.TYPE)
                        self.state = 133
                        self.match(ExprParser.RPAREN)


                    self.state = 136
                    self.match(ExprParser.NUM)
                    pass

                elif la_ == 3:
                    self.state = 137
                    self.used_func()
                    pass


                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Used_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_used_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsed_func" ):
                listener.enterUsed_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsed_func" ):
                listener.exitUsed_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsed_func" ):
                return visitor.visitUsed_func(self)
            else:
                return visitor.visitChildren(self)




    def used_func(self):

        localctx = ExprParser.Used_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_used_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(ExprParser.ID)
            self.state = 146
            self.match(ExprParser.LPAREN)
            self.state = 147
            self.match(ExprParser.ID)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 148
                self.match(ExprParser.COMMA)
                self.state = 149
                self.match(ExprParser.ID)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(ExprParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NUM)
            else:
                return self.getToken(ExprParser.NUM, i)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet" ):
                listener.enterSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet" ):
                listener.exitSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet" ):
                return visitor.visitSet(self)
            else:
                return visitor.visitChildren(self)




    def set_(self):

        localctx = ExprParser.SetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(ExprParser.LCURLY)
            self.state = 158
            self.match(ExprParser.NUM)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 159
                self.match(ExprParser.COMMA)
                self.state = 160
                self.match(ExprParser.NUM)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(ExprParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Any_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)


        def SEMI(self):
            return self.getToken(ExprParser.SEMI, 0)

        def assign_statement(self):
            return self.getTypedRuleContext(ExprParser.Assign_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(ExprParser.If_statementContext,0)


        def show_statement(self):
            return self.getTypedRuleContext(ExprParser.Show_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(ExprParser.Return_statementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_any_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_statement" ):
                listener.enterAny_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_statement" ):
                listener.exitAny_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAny_statement" ):
                return visitor.visitAny_statement(self)
            else:
                return visitor.visitChildren(self)




    def any_statement(self):

        localctx = ExprParser.Any_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_any_statement)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.statement()
                self.state = 169
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.assign_statement()
                self.state = 172
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.show_statement()
                self.state = 176
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 178
                self.return_statement()
                self.state = 179
                self.match(ExprParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def STR(self):
            return self.getToken(ExprParser.STR, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_show_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_statement" ):
                listener.enterShow_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_statement" ):
                listener.exitShow_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_statement" ):
                return visitor.visitShow_statement(self)
            else:
                return visitor.visitChildren(self)




    def show_statement(self):

        localctx = ExprParser.Show_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_show_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(ExprParser.PRINT)
            self.state = 184
            self.match(ExprParser.LPAREN)
            self.state = 185
            _la = self._input.LA(1)
            if not(_la==20 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 186
            self.match(ExprParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def if_condition(self):
            return self.getTypedRuleContext(ExprParser.If_conditionContext,0)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LCURLY)
            else:
                return self.getToken(ExprParser.LCURLY, i)

        def RCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RCURLY)
            else:
                return self.getToken(ExprParser.RCURLY, i)

        def any_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Any_statementContext)
            else:
                return self.getTypedRuleContext(ExprParser.Any_statementContext,i)


        def ELSE(self):
            return self.getToken(ExprParser.ELSE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = ExprParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(ExprParser.IF)
            self.state = 189
            self.match(ExprParser.LPAREN)
            self.state = 190
            self.if_condition()
            self.state = 191
            self.match(ExprParser.RPAREN)
            self.state = 192
            self.match(ExprParser.LCURLY)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1411072) != 0):
                self.state = 193
                self.any_statement()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 199
            self.match(ExprParser.RCURLY)
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 200
                self.match(ExprParser.ELSE)
                self.state = 201
                self.match(ExprParser.LCURLY)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1411072) != 0):
                    self.state = 202
                    self.any_statement()
                    self.state = 207
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 208
                self.match(ExprParser.RCURLY)

